--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minion-talks</title>
-    <script src="app.js" type="text/javascript"></script>
+   <style>
+       textarea {
+           width: 80%;
+           display: block;
+           height: 10vh;
+           padding: 0.5rem;
+           margin:1rem;
+       }
+   </style>
 </head>
 <body>
-    Hi, This is minion talks page.
+    <h1>MINION TALKS</h1>
+    <textarea id="txt-input" placeholder="enter you sentenses and we ll convert this into minion language"></textarea>
+    <button id="btn-translate">Translate</button>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
