--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
         <div class="card-wrapper">
             <div class="content">
-                <h1 class="glitch" data-text="MINIONIOL">MINIONIOL</h1>
+                <h1 class="glitch" data-text="shakespeare words">shakespeare words</h1>
                 
                 <br>
                 <section class="row">
                     <div class="flex-child">
-                        <img src="minions.png" style="border:none;">
+                        <img src="Shakespeare.jpg" style="border:10px;width:500px;height:500px">
                       
                     </div>
                     <div class="flex-child">
